--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <header>
         <p>This is header section.</p>
         <p>Push kora ta test korte cai</p>
+        <p>Pull kora ta test korte cai</p>
+
     </header>
 </body>
 </html>
